# ten-framework

./: .coderabbit.yaml  .gitattributes  .gitignore  AGENTS.md  BUILD.gn  CLAUDE.md  DIARIZATION_CHECKLIST.md  DIARIZATION_FIXES.md  README.md  README_CN.md  TTS_Extension_Development_Guide.md  Taskfile.yml  biome.json  build.sh  flake.nix  log_build_cpp.txt  log_build_cpp_without_signs.txt  netlify.toml  package.json  plan.md  pyrightconfig.json  test.sh  test_manager.ps1  test_rust_bt.c  test_rust_bt.h
.agent/rules/: chinese.md
.devcontainer/: devcontainer.json
.github/tools/: setup_pytest_dependencies.py
.github/workflows/: _check_pr_status.yml  agents.yaml  ai_agents.yaml  build_docker.yml  build_docker_for_agents.yml  build_docker_for_ai_agents.yml  build_node_shared.yml  cancel_on_merged.yml  check_env.yml  check_env_mac_x64.yml  claude_code_review.yml  codecov.yml  codeql.yml  codeql_c_cpp_analysis.yml  commitlint.yml  coverage.yml  coverage_coveralls_runtime.yml  coverage_coveralls_rust.yml  from_scratch.yml  linux_arm64.yml  linux_ubuntu2204.yml  linux_x64.yml  mac_arm64.yml  mac_arm64_without_rust.yml  mac_x64.yml  manual_publish_extension.yml  manual_test_asr_guarder.yml  pr_code_review.yml  tman_full_linux_arm64.yml  tman_full_linux_x64.yml  tman_full_mac_arm64.yml  tman_full_mac_x64.yml  tman_full_win_x64.yml  trigger_sync_remote_docs.yml  update_homebrew.yml  update_winget.yml  win.yml
ai/: AI_working_with_ten.md  AI_working_with_ten_compact.md  AVATAR_GRAPHS_TESTING.md  Migrating_heygen_branch_to_main.md  apollo.md  channel_plan.md  current_task_plan.md  docs_plan.md  flush_handling_clarification.md  hellos_aiohttp_plan.md  latency_investigation.md  optimize.md  status.md  tag.md  tts_end_plan.md  tts_routing_summary.md  tts_routing_test_plan.md  tts_routing_test_results.md
ai/deepgram/: COMPLETION_SUMMARY.md  DOCKER_BUILD_NOTES.md  SETUP_VOICE_ASSISTANT_ADVANCED.md  plan_flux.md  status.md
ai/logging/: MINIMAL_CONFIG.md  README.md  SOLUTION.md  findings.md  minimal_logging_plan.md  phase1_findings.md  phase2_findings.md  plan.md
ai/thymia/: IMPLEMENTATION.md  design_discussion.md  plan.md
ai_agents/: .dockerignore  .env.example  .env.swp  AGENTS.md  CLAUDE.md  Dockerfile  PERSISTENT_KEYS_CONFIG.md  Taskfile.yml  docker-compose.yml  pyrightconfig.json
ai_agents/agents/: .gitignore  main.go
ai_agents/agents/ten_packages/extension/gradium_tts_python/: README.md  config.py  extension.py  gradium_tts.py  manifest.json  property.json  pyproject.toml
ai_agents/agents/ten_packages/extension/gradium_tts_python/tests/: test_basic.py  test_metrics.py  test_params.py  test_robustness.py  test_state_machine.py
ai_agents/agents/ten_packages/extension/gradium_tts_python/tests/configs/: property_basic_audio_setting1.json  property_basic_audio_setting2.json  property_dump.json
ai_agents/demo/: Dockerfile
ai_agents/playground/: .env  Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js
ai_agents/scripts/: smoke_blaze.py
ai_agents/server/: main.go
ai_agents/transcription/: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
core/src/ten_runtime/app/service_hub/api/: BUILD.gn
core/src/ten_runtime/binding/go/: BUILD.gn  manifest.json
core/src/ten_runtime/binding/go/interface/ten_runtime/: addon.go  addon_manager.go  c_value.go  c_value.h  cmd_start_graph.go  cmd_stop_graph.h  common.h  extension_tester.go  extension_tester.h  handle.go  log_option.go  msg.go  ten_env.go  ten_env_export.go  ten_env_tester.go  value.go  value_buffer.go
core/src/ten_runtime/binding/go/native/: BUILD.gn
core/src/ten_runtime/binding/go/native/addon/: addon.c
core/src/ten_runtime/binding/go/native/extension/: extension.c
core/src/ten_runtime/binding/go/native/internal/: common.c
core/src/ten_runtime/binding/go/native/msg/: msg.c
core/src/ten_runtime/binding/go/native/ten_env/: ten_env_log.c  ten_env_on_deinit_done.c  ten_env_on_init_done.c
core/src/ten_runtime/binding/go/native/test/: extension_tester.c
core/src/ten_runtime/binding/go/native/test/env_tester/: env_tester_log.c  env_tester_stop_test.c
core/src/ten_runtime/binding/go/native/value/: value.c
core/src/ten_runtime/binding/nodejs/native/: BUILD.gn
core/src/ten_runtime/binding/nodejs/native/addon/: addon.c  addon_manager.c
core/src/ten_runtime/binding/nodejs/native/extension/: extension.c
core/src/ten_runtime/binding/nodejs/native/msg/: cmd_start_graph.c  cmd_stop_graph.c
core/src/ten_runtime/binding/nodejs/native/ten_env/: ten_env_log_internal.c  ten_env_on_create_instance_done.c  ten_env_on_deinit_done.c  ten_env_on_destroy_instance_done.c  ten_env_on_init_done.c
core/src/ten_runtime/binding/nodejs/native/test/: extension_tester.c
core/src/ten_runtime/binding/nodejs/native/test/env_tester/: env_tester.c  env_tester_log_internal.c  env_tester_on_deinit_done.c  env_tester_on_init_done.c  env_tester_on_start_done.c  env_tester_on_stop_done.c  env_tester_return_result.c  env_tester_send_audio_frame.c  env_tester_send_cmd.c  env_tester_send_data.c  env_tester_send_video_frame.c  env_tester_stop_test.c
demo/: .env
docs/: README-CN.md  README-ES.md  README-FR.md  README-IT.md  README-JP.md  README-KR.md
docs/ai/: L0_repo_card.md
docs/api/: log.cn.md  log.md  tman.md
docs/development/: how_to_develop_with_ext.md
docs/getting-started/: quick-start.cn.md  quick-start.md  websocket-voice-assistant-quick-start.cn.md
tests/ten_runtime/: BUILD.gn
tests/ten_utils/: BUILD.gn
tests/utils/: build_pkg.py
tools/coverage/: run_integration_tests_for_coverage.py  ten_runtime_coverage.py
tools/grafana-monitoring/: EXAMPLE.md  README.md  docker-compose.hybrid.yml  docker-compose.pull.yml  docker-compose.push.yml  docker-compose.yml  prometheus.yml
tools/tman/: install_tman.sh  upload-to-ppa.sh
tools/upgrade/: manifest_json_from_0_8_to_0_10.py
tools/version/: common.py  update_version_in_ten_framework.py
tools/winget/: manifest.installer.yaml.template  manifest.locale.en-US.yaml.template  (+6 more)
(+2521 files in other folders)
