#
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0.
# See the LICENSE file for more information.
#

[project]
name = "gradium_tts_python"
version = "0.1.1"
description = "Gradium TTS extension for TEN Framework"
requires-python = ">=3.10"
dependencies = [
    "websockets~=14.0",
]
